--- a/css/_materialFullCalendar.css
+++ b/css/_materialFullCalendar.css
@@ -37,6 +37,10 @@ Colors: Use the following - https://www.google.com/design/spec/style/color.html#
 
 */
 
+body {
+    font-family: sans-serif;
+}
+
 .fc-state-highlight {
     opacity: 0;
     border: none;
